Performance: SERVER-88220 causes regression in TPCH Denormalized Q15

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc5
    • Affects Version/s: 8.0.0-rc0, 8.1.0-rc0
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-88220 "Enable match pushdown for replaceRoot" commit 21a176e6 caused a -38.4% performance regression in TPCH Denormalized Query 15.

      Commenting out the main body (everything but the no-op return statement at the end) of the newly introduced ReplaceRootTransformation::doOptimizeAt() method from SERVER-88220 on the near-latest master level 4e023839 produces a +10.0% performance gain on this query.

      This ticket will be used to revert SERVER-88220.

            Assignee:
            Kevin Cherkauer (Inactive)
            Reporter:
            Kevin Cherkauer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: