SERVER-89988 Revert "SERVER-88220 Enable match pushdown for replaceRoot (#20174)" (#21743)

GitOrigin-RevId: cb82dc736b23d356d5154f1f537e5fc9f760fdd2