src/mongo/db/pipeline/group_from_first_document_transformation.h
@@ -95,9 +95,6 @@ public:
 
     void optimize() final;
 
-    Pipeline::SourceContainer::iterator doOptimizeAt(Pipeline::SourceContainer::iterator itr,
-                                                     Pipeline::SourceContainer* container) final;
-
     Document serializeTransformation(boost::optional<ExplainOptions::Verbosity> explain,
                                      const SerializationOptions& options = {}) const final;
 
